--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         height: 100vh;
         text-align: center;
     }
+  .header {
+        font-size: 40px;
+        margin-bottom: 3em;
+    }
 	.quote {font-style: italic;}
 	.name {
         text-align: right;
@@ -57,6 +61,7 @@
 </style>
 <body>
 	<main>
+    <p class="header">¡NO, hoy no puedes salir! Quédate en casa, por favor.</p>
 		<p class="quote the_answer"></p>
 		<p class="name">I.D.A</p>
 	</main>
