--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
         font-size: 45px;
         margin-top: 20px;
     }
+  .footer, .footer a {
+        font-size: 12px;
+        margin-top: 9em;
+        font-weight: 100;
+        color: #a0a0a0;
+  }
 	@media(max-width: 1250px) {
         body {font-size:55px;}
         main {
@@ -64,6 +70,7 @@
     <p class="header">¡NO, hoy no puedes salir! Quédate en casa, por favor.</p>
 		<p class="quote the_answer"></p>
 		<p class="name">I.D.A</p>
+    <p class="footer">Made with ❤️ by <a href="https://twitter.com/@jmbeas">@jmbeas</a> and <a href="https://twitter.com/@v4n3554ms">@v4n3554ms</a>.</p>
 	</main>
 
 
