--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<title>Puedo salir hoy de Madrid</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-BX93DG4VKV"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'G-BX93DG4VKV');
+  </script>
 </head>
 <style type="text/css">
 	@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
