--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
             width: 100%;
             padding:100px;
         }
+        .header {
+          font-size: 20px;
+          margin-bottom: 2em;
+        }
         .name {font-size:40px;}
     }
 	@media(max-width: 980px){
