--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
   		 'La protección individual es clave en este momento. Tu mascarilla es como tu casco o una tirita. Piensa en tu seguridad y en la de los mayores.',
   		 'Los asintomáticos no contagian.',
   		 'Yo creo que a un niño le den una pizza no es un problema. No creo que los niños que están en sus casas confinados, y jartos de estar ahí, tengan que aguantar los menús que le podrían poner sus señorías de Podemos, que a lo mejor son los de Venezuela, que es nada.',
+       'Es que esas preguntas no se le hacen a una presidenta de una comunidad autónoma.',
+       'Porque si cierras los bares, la gente vuelve a sus casas a infectar a sus familias.',
+       'La lealtad es defender lo que es bueno para los ciudadanos a los que representas, manteniendo el mismo discurso en público y en privado. Hacer lo contrario es dejación de funciones.',
+       'Madrid es de todos. Madrid es España dentro de España.',
 		 ];
 		 const sentence = sentences[Math.floor(Math.random() * sentences.length)];
 		 const container = document.getElementsByClassName('the_answer')[0];
