Add more Ayuso sentences

--- a/index.html
+++ b/index.html
@@ -99,6 +99,29 @@
        'Porque si cierras los bares, la gente vuelve a sus casas a infectar a sus familias.',
        'La lealtad es defender lo que es bueno para los ciudadanos a los que representas, manteniendo el mismo discurso en público y en privado. Hacer lo contrario es dejación de funciones.',
        'Madrid es de todos. Madrid es España dentro de España.',
+       '(Los rebrotes de Covid) se están produciendo, entre otras, cosas por el modo de vida que tiene nuestra inmigración en Madrid y por la densidad de población de esos distritos y municipios.',
+      '(Sobre Cataluña) No se terminó con diálogo con el nazismo.', 
+      '(Sobre el coronavirus y la reapertura de negocios) Los accidentes de tráfico dejan cifras de muertos mayores y no porque ocurran le decimos a la gente que no conduzca más', 
+      '(Sobre la propuesta de Vox de llevar el Orgullo Gay a la Casa de Campo) La Casa de Campo ya no sólo porque es un bien patrimonial, es un escenario donde las familias el fin de semana van a estar y hacer deporte. No creo que sea el sitio.', 
+      '¿Cada vez que tenga una propuesta tengo que someterme al escrutinio público como si estuviera en ‘Saber y Ganar’, que no me sé la respuesta?', 
+      'A lo largo del tiempo mucha de la corrupción (del PP) resulta que no es tanta o tiene explicación.', 
+      'Ahora las mujeres están obligadas a ir a las manifestaciones cuando en España nunca fue obligatorio ir a una manifestación y han pasado de lo que decían los maridos a lo que dicta la izquierda. Ya tenemos nueva obediencia.', 
+      'Contaré con ellas (Aguirre y Cifuentes), siempre que quieran. Son dos activos del PP. Los dos errores que cometió Cifuentes y que pagó como ningún mortal los cometió antes de ser presidenta de Madrid. Con Aguirre me gustaría reunirme pronto para pedirle consejos.', 
+      'Dios no me hizo perfecta, y por eso no soy de Vox.', 
+      'El aborto no es un derecho de la mujer. Me preocupa que nunca se considere al padre y que se use casi como método anticonceptivo. No criminalizo a nadie, pero un porcentaje muy alto son de inmigrantes o mujeres sin recursos que lo hacen por segunda vez o tercera vez. El problema más importante de España es la baja natalidad.', 
+      'El hombre por sí mismo no es un ser violento, porque el hombre también agrede al hombre.', 
+      'La mayoría de los jóvenes que se van al extranjero, sino que lo hacen por compartir cultura y entrar en otros mercados laborales.',
+      'La verdad es que en esos momentos cuando estaba haciendo la foto te confieso que no estaba tampoco muy cómoda. Lo que pasa es que había sido un día muy largo, una semana durísima, era viernes por la tarde… ‘Ponte así, ponte asá’, y bueno, pues lo haces, pero estaba sinceramente deseando irme a casa y no reparé en más. (Ayuso en declaraciones sobre su famosa portada en El Mundo)', 
+      'Me sorprende que para la asesina del niño Gabriel se pidan tres años de prisión (por parte de su defensa) y que la Fiscalía haya solicitado tres años y tres meses de cárcel para la expresidenta regional Cristina Cifuentes por el caso Máster. No entiendo nada.', 
+      'Mi querida amiga Ana, que también será eurodiputada dentro de poco, tiene una niña desde hace una semana y ya está emprendiendo por el mundo, es el tipo de mujer que yo defiendo. Este el tipo de mujer que a mí me gusta y no el de la izquierda, que tiene que victimizar y colectivizar los sentimientos.', 
+      'Podemos ver, en este primer caso, al macho alfa principal de Podemos en una postura de apertura de piernas de 45 grados con remango, pudiendo parecer la postura de El Pensador, de Rodin, en una frase profunda estilo bolivariano del siglo XXI.', 
+      'Queremos que el concebido no nacido sea considerado un miembro más de la unidad familiar de manera en que se le tengan en cuenta a la hora de solicitar plaza o tramitar un título de familia numerosa (…) La idea sería que una vez que una mujer está embarazada su hijo disfrute de pleno derecho de todas la ayudas y ventajas fiscales que se pueda tener para las familias numerosas y de especial categoría. (Un periodista le pregunta qué pasaría en caso de que el embarazo no llegue a término, e Isabel se lía un poco..:) Todavía no he estudiado qué hacer si se produce un problema durante el embarazo y el bebé no llega a nacer. No lo he pensado (…) No lo tengo claro, creo que no. A la hora de solicitar una plaza evidentemente no, pero a la hora de expedir el título lo sopesaré.',
+      'Sánchez pacta con los independentistas radicales, que son racistas en Catalunya, y que permiten que los profesores desprecien a los alumnos por pedir ir a hacer pis al baño en español.', 
+      'Si sigue Podemos en el Ayuntamiento de Madrid no va a haber atascos, más que, eso sí, por el día porque esos están por todas partes.', 
+      'Tras la exhumación de los restos de Franco, ¿será lo siguiente la Cruz del Valle, todo el Valle, las parroquias del barrio arderán como en el 36?', 
+      'Un día os iréis de vacaciones y cuando volváis Podemos habrá dado la casa a sus amigos okupas.', 
+      'Vox no es extremo. El último caso de “manspreading” que tenemos es del señor Sánchez Mato, como puede verse, es una postura en la que probablemente esté muy cómodo mientras está urdiendo informes ilegales contra el Partido Popular que después le lleva ante tribunales, motivo por el cual acaba siendo imputado.', 
+      'Yo prefiero un empleo a que no haya empleo. A mí, cuando empiezan a hablar de empleo basura me parece que es ofensivo para el que está deseando tener ese empleo basura que está dando oportunidades para corregir problemas que tenía.',
 		 ];
 		 const sentence = sentences[Math.floor(Math.random() * sentences.length)];
 		 const container = document.getElementsByClassName('the_answer')[0];
